# Supreme-Agent

./: .env.example  .gitignore  DECISIONS.md  LM_STUDIO_MCP_SETUP.md  MCP  Makefile  PROJECT_PRESENTATION.md  README.md  pyproject.toml  test_mcp_load.py
config/: agent.yaml  escalation.yaml  mcp.yaml  memory.yaml  models.yaml  safety.yaml  tools.yaml  ui.yaml
scripts/: monitor_prompt.py
src/: __init__.py
src/api/: __init__.py  agent.py
src/core/: __init__.py  executive.py  executor.py  models.py  planner.py  reasoner.py  tool_router.py
src/core/post_execution/: __init__.py  feedback.py  interpreter.py  normalizer.py  verifier.py
src/escalation/: __init__.py  manager.py  tier1_vscode.py  tier2_claude.py  tier3_browser.py
src/interface/: cli.py  web.py
src/mcp_servers/: auth.py  handlers.py  lmstudio_exposer.py  server.py
src/memory/: __init__.py  manager.py
src/safety/: __init__.py  audit_log.py  manager.py
src/tools/: base.py  email_tool.py  file_tool.py  keyboard_tool.py  monitor_tool.py  python_tool.py  rag_tool.py  registry.py  run_agent_tool.py  screenshot_tool.py  shell_tool.py  vision_tool.py  web_search_tool.py  window_tool.py
src/utils/: __init__.py  config.py  lm_studio_client.py  logging.py  metrics.py  screenshot.py  tokens.py
tests/: __init__.py  conftest.py  test_config.py  test_escalation.py  test_escalation_tiers.py  test_executive.py  test_lm_studio_client.py  test_mcp_single_tool.py  test_memory.py  test_models.py  test_post_execution.py  test_safety.py  test_screenshot.py  test_tokens.py  test_tools.py  test_web_ui.py
