[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "executive-agent"
version = "0.1.0"
description = "Personal Executive Agent — autonomous task executor with planning, tools, memory, safety, and escalation"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "chromadb>=0.5",
    "click>=8.1",
    "loguru>=0.7",
    "tenacity>=8.3",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "mss>=9.0",
    "Pillow>=10.3",
    "websockets>=12.0",
    "aiosqlite>=0.20",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
